Ajuste en la clase Teclado